--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,9 @@ header {
     width: 100%;
 }
 
-
-
 nav ul li {
     display: inline-block;
-    padding: 5px;
+    padding: 10px;
 }
 
 nav ul li a {
@@ -59,18 +57,46 @@ nav ul li a {
     width: 25%;
 }
 
-.instalaciones {
-    border-radius: 3%;
-    width: 35%;
-}
-
-#servicios img {
-    width: 10%;
-}
-
 .profimg {
     width: 15%;
     border-radius: 50%;
+}
+
+.Servicios {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 50px;
+    margin: 30px;
+}
+
+.Servicios div {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+    justify-content: center;
+    gap: 25px;
+}
+
+.Servicios div.Reves {
+    grid-template-columns: auto 1fr;
+}
+
+.Servicios div.Reves img {
+    order:-1;
+}
+
+.Servicios div img {
+    width: 100px;
+}
+
+.Servicios div span {
+    display: block;
+    align-items: center;
+    color: var(--rosarojo);
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
 }
 
 .carousel-inner img {
@@ -181,6 +207,23 @@ footer {
         font-size: 120%;
     }
 
+    .Servicios {
+        gap: 50px;
+        margin: 40px;
+    }
+    
+    .Servicios div {
+        gap: 20px;
+        width: 70%;
+    }
+
+    .Servicios div img {
+        width: 150px;
+    }
+
+    .Servicios div span {
+        font-size: 25px;
+    }
 
 }
 
