--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ body {
 }
 
 h1 {
+    font-size: 30px;
     background-color: var(--rosarojo);
     color: var(--crema);
 }
@@ -26,7 +27,7 @@ h1 {
     --violetagris: #625772;
 }
 
-/* Comienzo de modificacion de estilos en el header. Tamaño de logo, alineamiento de items, se saca el subrayado de los links, se coloca un color diferente cuando se pasa el mouse por encima y se centra todo el contenido*/
+/* ESTILOS PARA LA NAVBAR */
 
 header {
     display: grid;
@@ -46,39 +47,60 @@ nav ul li a {
     color: var(--rosarojo);
 }
 
-/* Ajustes de tamaño a imagenes e iconos dentro de las paginas web */
-.adopcion {
-    border-radius: 15%;
-    width: 25%;
+/* PEQUEÑO MARGIN PARA TODOS LOS MAIN */
+
+main{
+    margin: 2px;
 }
 
-.profimg {
-    width: 15%;
-    border-radius: 50%;
+/* ESTILOS PARA EL INDEX */
+
+.index p strong{
+    display: block;
+    color: var(--rosarojo);
 }
+
+.nuestras-instalaciones{
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.index a {
+    color: var(--rosarojo);
+    display: block;
+    text-decoration: none;
+    padding-bottom: 15px;
+}
+
+.index a:hover{
+    transform: scale(1.05);
+}
+
+.carousel-inner img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
+
+.carousel-caption {
+    background: rgba(0, 0, 0, 0.3);
+    padding: 5px;
+    border-radius: 25px;
+}
+
+/* ESTILOS PARA LA SECCION DE SERVICIOS */
 
 .Servicios {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 50px;
-    margin: 30px;
+    gap: 40px;
 }
 
 .Servicios div {
-    display: grid;
-    grid-template-columns: 1fr auto;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 25px;
-}
-
-.Servicios div.Reves {
-    grid-template-columns: auto 1fr;
-}
-
-.Servicios div.Reves img {
-    order: -1;
 }
 
 .Servicios div img {
@@ -94,22 +116,7 @@ nav ul li a {
     text-align: center;
 }
 
-.carousel-inner img {
-    width: 100%;
-    height: 400px;
-    /* Ajusta la altura de las imágenes */
-    object-fit: cover;
-    /* Asegura que las imágenes mantengan su proporción */
-}
-
-.carousel-caption {
-    background: rgba(0, 0, 0, 0.3);
-    /* Fondo negro semi-transparente */
-    padding: 5px;
-    /* Agrega espacio interno para que el texto no esté pegado */
-    border-radius: 25px;
-    /* Esquinas redondeadas (opcional) */
-}
+/* ESTILOS PARA LA SECCION DE FAQ */
 
 .accordion {
     background: url(../img/adopcion/perro3.jpg) no-repeat center center/cover;
@@ -128,6 +135,8 @@ nav ul li a {
 .accordion-body {
     background-color: rgba(255, 255, 255, 0.8);
 }
+
+/* ESTILOS PARA LA SECCION DE FORMULARIO */
 
 .MainContacto h3 {
     padding: 10px;
@@ -152,19 +161,12 @@ nav ul li a {
 
 .BtnEnviar {
     background-color: var(--rosarojo);
-    /* Color verde atractivo */
     color: white;
-    /* Texto blanco para un buen contraste */
     padding: 10px 20px;
-    /* Espaciado interno */
     border: none;
-    /* Sin bordes */
     border-radius: 35px;
-    /* Bordes redondeados */
     font-size: 18px;
-    /* Tamaño de fuente adecuado */
     cursor: pointer;
-    /* Cambia el cursor al pasar por encima */
     margin-bottom: 20px;
 }
 
@@ -177,22 +179,18 @@ nav ul li a {
 
 .BtnEnviar:hover {
     transform: translateY(-2px);
-    /* Levanta el botón ligeramente */
     background-color: #D96B6B;
 }
 
 input::placeholder,
 textarea::placeholder {
     font-size: 14px;
-    /* Ajusta el tamaño de la fuente */
 }
 
 label {
     display: block;
-    /* Hace que los labels ocupen toda la línea */
     font-size: 22px;
     font-weight: bold;
-    /* Hace que los textos de los labels sean más visibles */
     align-self: flex-start;
 }
 
@@ -212,7 +210,8 @@ label {
     width: 180px;
 }
 
-/* ESTILOS WEB ADOPCION */
+/* ESTILOS PARA LA SECCION DE ADOPCION */
+
 .ContenidoAdopcion {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -263,8 +262,7 @@ label {
     font-size: 15px;
 }
 
-
-/* Comienzos de modificacion de estilos en el footer. Color de fondo, tamaño de los logos y de la img de la ubicacion. Se distribuye en contenido en seciones de izquierda, derecha y centro */
+/* ESTILOS PARA EL FOOTER */
 
 footer {
     margin-top: 30px;
@@ -307,8 +305,11 @@ footer {
     padding: 10px;
 }
 
+/* ###########  MQ PARA PANTALLAS DE ESCRITORIO ###########*/
 
 @media (min-width: 1024px) {
+
+    /* MODIFICACION PARA EL NAVBAR */
 
     nav ul li {
         white-space: nowrap;
@@ -328,6 +329,8 @@ footer {
         padding-right: 20px;
     }
 
+    /* MODIFICACION PARA EL INDEX */
+
     #carouselExampleAutoplaying {
         width: 900px;
         margin: auto;
@@ -341,19 +344,16 @@ footer {
 
     #carouselExampleCaptions {
         width: 600px;
-        /* Ajusta el ancho del carrusel */
         margin: auto;
-        /* Centra el carrusel */
     }
 
     .carousel-inner img {
         width: 100%;
         height: 400px;
-        /* Ajusta la altura de las imágenes */
         object-fit: cover;
-        /* Asegura que las imágenes mantengan su proporción */
     }
 
+    /* MODIFICACION PARA EL FOOTER */
 
     .DerechosReservados {
         font-size: 100%;
@@ -373,23 +373,39 @@ footer {
         font-size: 120%;
     }
 
+    /* MODIFICACION PARA LA SECCION DE SERVICIOS */
+
     .Servicios {
         gap: 50px;
         margin: 40px;
     }
-
+    
     .Servicios div {
-        gap: 20px;
+        display: grid;
+        grid-template-columns: 1fr auto;
+        align-items: center;
+        justify-content: center;
+        gap: 25px;
         width: 70%;
     }
-
+    
+    .Servicios div.Reves {
+        grid-template-columns: auto 1fr;
+    }
+    
+    .Servicios div.Reves img {
+        order: -1;
+    }
+    
     .Servicios div img {
         width: 150px;
     }
-
+    
     .Servicios div span {
         font-size: 25px;
     }
+
+    /* MODIFICACION PARA LA SECCION DE FORMULARIO */
 
     .Formulario {
         width: 350px;
@@ -403,7 +419,8 @@ footer {
         width: 240px;
     }
 
-    /* ESTILOS WEB ADOPCION */
+    /* MODIFICACION PARA LA SECCION DE ADOPCION */
+
     .ContenidoAdopcion {
         grid-template-columns: repeat(3, 1fr);
         gap: 20px;
@@ -431,6 +448,8 @@ footer {
         display: none;
     }
 }
+
+/* MQ PARA LA NAVBAR HAMBURGUESA, PARA DISPOSITIVOS HASTA 1023px */
 
 @media (max-width: 1023px) {
 
