--- a/scss/mq/_mq-desktop.scss
+++ b/scss/mq/_mq-desktop.scss
@@ -107,9 +107,9 @@
 		display: none;
 	}
 
-	footer{
-		position: absolute;
+    .FooterCorto{
+        position: absolute;
         bottom: 0;
         width: 100%;
-	}
+    }
 }
