--- a/scss/mq/_mq-tablet.scss
+++ b/scss/mq/_mq-tablet.scss
@@ -96,9 +96,6 @@
     }
 
     footer {
-        position: absolute;
-        bottom: 0;
-        width: 100%;
         div {
             .RedesSociales {
                 svg {
@@ -112,5 +109,11 @@
                 }
             }
         }
+    }
+
+    .FooterCorto{
+        position: absolute;
+        bottom: 0;
+        width: 100%;
     }
 }
