--- a/scss/mq/_mq-mobile.scss
+++ b/scss/mq/_mq-mobile.scss
@@ -1,3 +1,6 @@
+/* MQ MOBILE (no se aplica la mq porque se diseno mobile first*/
+
+/* Estilos navbar */
 .Logo {
 	img {
 		width: 100%;
@@ -22,6 +25,8 @@ nav {
 main {
 	margin: 2px;
 }
+
+/* ESTILOS PARA EL INDEX */
 .index {
 	p {
 		strong {
@@ -53,6 +58,8 @@ main {
 	padding: 5px;
 	border-radius: 25px;
 }
+
+/* ESTILOS PARA LA SECCION DE SERVICIOS */
 .Servicios {
 	@include flex(column, center, center);
 	gap: 40px;
@@ -71,6 +78,8 @@ main {
 		}
 	}
 }
+
+/* ESTILOS PARA LA SECCION DE FAQ */
 .accordion {
 	background: url(../img/adopcion/perro3.jpg) no-repeat center center/cover;
 }
@@ -85,6 +94,8 @@ main {
 .accordion-body {
 	background-color: rgba(255, 255, 255, 0.8);
 }
+
+/* ESTILOS PARA LA SECCION DE FORMULARIO */
 .MainContacto {
 	h3 {
 		padding: 10px;
@@ -131,6 +142,8 @@ label {
 	font-weight: bold;
 	align-self: flex-start;
 }
+
+/* ESTILOS PARA LA SECCION DE ADOPCION */
 .ContenidoAdopcion {
 	display: grid;
 	grid-template-columns: repeat(2, 1fr);
@@ -162,6 +175,8 @@ label {
 		font-size: 15px;
 	}
 }
+
+/* ESTILOS PARA EL FOOTER */
 footer {
 	margin-top: 30px;
 	background-color: $color-terciario;
