--- a/scss/utils/_mixin.scss
+++ b/scss/utils/_mixin.scss
@@ -1,11 +1,13 @@
-/* mixin con parametros */
+/* MIXIN */
 
+/* Mixin de grid, se pasa por parametro columnas y filas*/
 @mixin grid($column, $row){
     display: grid;
     grid-template-columns: $column;
     grid-template-rows: $row;
 }
 
+/* Mixin de lob botones, se pasa por parametro el tamano de la fuente, el borde y el padding */
 @mixin btn($font-size, $border-radius ,$padding){
     font-size: $font-size;
     border-radius: $border-radius;
@@ -21,6 +23,7 @@
     }
 }
 
+/* Mixin de estilos del formulario, no tiene parametros */
 @mixin formMobile(){
     border: none;
     border-bottom: 2px solid $color-secundario;
@@ -29,6 +32,7 @@
     width: 180px;
 }
 
+/* Mixin de Flex */ 
 @mixin flex($flex-direcition, $align-items, $justify-content){
     display: flex;
     flex-direction: $flex-direcition;
@@ -36,6 +40,7 @@
     justify-content: $justify-content;
 }
 
+/* Mixin para imagenes con object-fit: cover, se pasa por parametro el ancho y el alto */
 @mixin widthCover($width, $height){
     width: $width;
     height: $height;
