--- a/scss/mq/_mq-mobile.scss
+++ b/scss/mq/_mq-mobile.scss
@@ -195,11 +195,29 @@ footer {
 	@include flex(row, center, center);
 	grid-column: 1/2;
 	grid-row: 1/2;
-	svg {
-		width: 100%;
-		height: 40%;
+	gap: 15px;
+	margin-top: 10px;
+	
+	a {
+		display: inline-block; 
+		width: 40px;
+		height: 40px;
+		color: inherit;
+		
+		svg {
+			width: 100%;
+			height: 80%;
+			transition: transform 0.3s ease-in-out;
+		}
+
+		&:hover {
+			svg {
+				transform: scale(1.1);
+			}
+		}
 	}
 }
+
 .DireccionHorario {
 	@include flex(column, center, center);
 	grid-area: 1/2/3/3;
